# viva-project

./: .gitignore  LICENSE  Makefile  README.md
backend/: applescript_generator.py  asr_tools.py  get_location.py  langchain_agent.py  langchain_w_mcp.py  purolang.py  pyproject.toml  read.py  speech_backend.py  tts_tools.py  viva_api_server.py
backend/agent_tools/: __init__.py  applescript_tools.py
backend/agent_tools/applescript_tools/: __init__.py  calendar.py  context.py  core.py  feedback.py  finder.py  music.py  reminders.py  system.py  system_state.py
backend/src/: langchain_agent.py  pyproject.toml  viva_api_server.py
backend/src/agent_tools/: general_tools.py
backend/src/agent_tools/applescript_tools/: calendar.py  context.py  core.py  feedback.py  finder.py  mail_contacts.py  media_files.py  music.py  productivity.py  reminders.py  system_state.py
backend/src/chains/: applescript_generator.py
backend/src/tools/: language_tools.py  qwen_tts_tools.py  tts_tools.py
backend/tools/: qwen_tts_tools.py  tts_tools.py
macos-app/Viva/: ContentView.swift  Item.swift  ScreenShotManager.swift  VivaApp.swift
macos-app/Viva.xcodeproj/: project.pbxproj
macos-app/Viva.xcodeproj/xcuserdata/gerlandoscibetta.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macos-app/VivaTests/: VivaTests.swift
macos-app/VivaUITests/: VivaUITests.swift  VivaUITestsLaunchTests.swift
