[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.1",
    "espeakng-loader>=0.2.4",
    "fastapi>=0.136.0",
    "geocoder>=1.38.1",
    "langchain>=1.0.0",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.0.0",
    "langdetect>=1.0.9",
    "misaki[en]>=0.9.4",
    "mlx-audio>=0.4.2",
    "mlx-whisper>=0.4.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "uvicorn>=0.44.0",
]
